; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/hns3pf/extr_hclge_mbx.c_hclge_map_unmap_ring_to_vf_vector.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/hns3pf/extr_hclge_mbx.c_hclge_map_unmap_ring_to_vf_vector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hclge_vport = type { i32 }
%struct.hclge_mbx_vf_to_pf_cmd = type { i32* }
%struct.hnae3_ring_chain_node = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hclge_vport*, i32, %struct.hclge_mbx_vf_to_pf_cmd*)* @hclge_map_unmap_ring_to_vf_vector to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hclge_map_unmap_ring_to_vf_vector(%struct.hclge_vport* %0, i32 %1, %struct.hclge_mbx_vf_to_pf_cmd* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.hclge_vport*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.hclge_mbx_vf_to_pf_cmd*, align 8
  %8 = alloca %struct.hnae3_ring_chain_node, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.hclge_vport* %0, %struct.hclge_vport** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.hclge_mbx_vf_to_pf_cmd* %2, %struct.hclge_mbx_vf_to_pf_cmd** %7, align 8
  %11 = load %struct.hclge_mbx_vf_to_pf_cmd*, %struct.hclge_mbx_vf_to_pf_cmd** %7, align 8
  %12 = getelementptr inbounds %struct.hclge_mbx_vf_to_pf_cmd, %struct.hclge_mbx_vf_to_pf_cmd* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 1
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %9, align 4
  %16 = call i32 @memset(%struct.hnae3_ring_chain_node* %8, i32 0, i32 4)
  %17 = load %struct.hclge_mbx_vf_to_pf_cmd*, %struct.hclge_mbx_vf_to_pf_cmd** %7, align 8
  %18 = load %struct.hclge_vport*, %struct.hclge_vport** %5, align 8
  %19 = call i32 @hclge_get_ring_chain_from_mbx(%struct.hclge_mbx_vf_to_pf_cmd* %17, %struct.hnae3_ring_chain_node* %8, %struct.hclge_vport* %18)
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %10, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %3
  %23 = load i32, i32* %10, align 4
  store i32 %23, i32* %4, align 4
  br label %31

24:                                               ; preds = %3
  %25 = load %struct.hclge_vport*, %struct.hclge_vport** %5, align 8
  %26 = load i32, i32* %9, align 4
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @hclge_bind_ring_with_vector(%struct.hclge_vport* %25, i32 %26, i32 %27, %struct.hnae3_ring_chain_node* %8)
  store i32 %28, i32* %10, align 4
  %29 = call i32 @hclge_free_vector_ring_chain(%struct.hnae3_ring_chain_node* %8)
  %30 = load i32, i32* %10, align 4
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %24, %22
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @memset(%struct.hnae3_ring_chain_node*, i32, i32) #1

declare dso_local i32 @hclge_get_ring_chain_from_mbx(%struct.hclge_mbx_vf_to_pf_cmd*, %struct.hnae3_ring_chain_node*, %struct.hclge_vport*) #1

declare dso_local i32 @hclge_bind_ring_with_vector(%struct.hclge_vport*, i32, i32, %struct.hnae3_ring_chain_node*) #1

declare dso_local i32 @hclge_free_vector_ring_chain(%struct.hnae3_ring_chain_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
